deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartpress
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: smartpress
